<resources>
    <string name="app_name">GLoin</string>
    <string name="Bonjour">Bonjour </string>
    <string name="enregistrer">S\'enregistrer </string>
    <string name="bienvenue">Bienvenue </string>
    <string name="pseudo">Pseudo </string>
    <string name="motdepasse">Mot de passe </string>
    <string name="numero">Numéro </string>
    <string name="mail">Mail </string>
    <string name="valider">Valider </string>
    <string name="charger_img">Charger une image </string>
    <string name="vente_img">Vendre l\'image </string>
    <string name="vendre">Vendre </string>
    <string name="acheter">Acheter </string>
    <string name="pasDeConnexion">Connexion indisponible </string>
    <string name="profit">Profit total espéré </string>
    <string name="minPrice">Prix minimum </string>
    <string name="maxPrice">Prix de départ </string>
    <string name="nomImage">Nom de l\'image </string>





</resources>
