<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </ImageView>

    <EditText
        android:id="@+id/nomImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nomImage"
        android:visibility="gone"
        android:maxLines="1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/profit"
        android:maxLines="1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/maxPrice"
        android:maxLines="1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/minPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/minPrice"
        android:maxLines="1"
        android:inputType="number"
        />

    <Button
        android:id="@+id/buttonChargerImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:onClick="chargerImgDepuisGallery"
        android:text="@string/charger_img" >
    </Button>





    <Button
        android:id="@+id/buttonVenteImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_weight="0"
        android:onClick="venteImage"
        android:text="@string/vente_img" >
    </Button>

</LinearLayout>