<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font_size_title"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/bienvenue" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bienvenue">

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_larger"
        android:maxLines="1"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:hint="@string/pseudo" />



    <EditText
        android:id="@+id/motdepasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_larger"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/bienvenue"
        android:hint="@string/motdepasse" /> <requestFocus/>


    <EditText
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_larger"
        android:inputType="phone"
        android:layout_alignParentLeft="true"
        android:hint="@string/numero" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_larger"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:hint="@string/mail" />

<Button
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/valider"
    android:onClick="validerEnregistrement"/>



   </LinearLayout>


</RelativeLayout>